--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% title block %}{% endblock %}</title>
-    {% style block %}{% endblock %}
+    <title>{% block title %}{% endblock %}</title>
+    {% load static %}
+    {% block style %}{% endblock %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
-    {% content block %}{% endblock %}
+
+    {% block content %}{% endblock %}
 
 </body>
 
