1.將所有non_filde.error更正為non_field_error 2.將user-login.html更正

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,8 @@ body {
 
 }
 
-#regist-form {
+#regist-form,
+#user-login-form {
     margin: auto;
     background-color: burlywood;
     width: 40%;
