--- a/user/templates/user/user-register.html
+++ b/user/templates/user/user-register.html
@@ -53,8 +53,8 @@
             {% endif %}
             {% endfor %}
 
-            {% if form.non_field.errors %}
-            {% for error in non_field.errors %}
+            {% if form.non_field_errors %}
+            {% for error in non_field_errors %}
             {{error}} <br>
             {% endfor %}
             {% endif %}
