--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,8 @@
 <body>
     <div id="navbar">
         {% if request.user.is_authenticated %}
-        歡迎{{request.user}}登入:
+        歡迎{{request.user}}:
+        <a href="{% url 'create-todo' %}">建立待辦事項</a>
         <a href="{% url 'user-logout' %}">登出</a>
 
         {% else %}
