--- a/user/templates/user/user-register.html
+++ b/user/templates/user/user-register.html
@@ -54,7 +54,7 @@
             {% endfor %}
 
             {% if form.non_field_errors %}
-            {% for error in non_field_errors %}
+            {% for error in form.non_field_errors %}
             {{error}} <br>
             {% endfor %}
             {% endif %}
