--- a/templates/base.html
+++ b/templates/base.html
@@ -12,12 +12,15 @@
 
 <body>
     <div id="navbar">
+
         {% if request.user.is_authenticated %}
         歡迎{{request.user}}:
+        <a href="{% url 'all-todo' %}">首頁</a>
         <a href="{% url 'create-todo' %}">建立待辦事項</a>
         <a href="{% url 'user-logout' %}">登出</a>
 
         {% else %}
+        <a href="{% url 'all-todo' %}">首頁</a>
         <a href="{% url 'user-login' %}">登入</a>
         <a href="{% url 'user-register' %}">註冊</a>
 
