--- a/todo/templates/todo/all-todo.html
+++ b/todo/templates/todo/all-todo.html
@@ -11,7 +11,9 @@
     {% for todo in todos %}
     <div id="all-todo-list-title" style="font-weight: 700; padding: 5px;">
         {{todo.id}}
-        {{todo.title}} <br>
+
+        <a href="{% url 'todo-detail'  todo.id %}"> {{todo.title}}</a>
+        <br>
     </div>
 
     <div id="all-todo-list-text">
