--- a/todo/templates/todo/all-todo.html
+++ b/todo/templates/todo/all-todo.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}我的待辦事項{% endblock %}
+{% block title %}我的所有待辦事項{% endblock %}
 
 {% block content %}
 <div id="title">
-    <h1>我的待辦事項</h1>
+    <h1>我的所有待辦事項</h1>
 </div>
 <div id="all-todo-list">
 
