--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
         <a href="{% url 'all-todo' %}">首頁</a>
         <a href="{% url 'create-todo' %}">建立待辦事項</a>
         <a href="{% url 'uncompleted-todo' %}">未完成待辦事項</a>
+        <a href="{% url 'completed-todo' %}">已完成待辦事項</a>
         <a href="{% url 'user-logout' %}">登出</a>
 
         {% else %}
