--- a/todo/templates/todo/all-todo.html
+++ b/todo/templates/todo/all-todo.html
@@ -27,11 +27,18 @@
         <a href="{% url 'all-todo' %}?page_btn=prev&page={{page}}">上一頁</a>
         {% endif %}
 
+        {% for i in total_page %}
+        <a href="{% url 'all-todo' %}?page_btn=&page={{i}}">{{i}}</a>
+        {% endfor %}
+
         {% if next %}
         <a href="{% url 'all-todo' %}?page_btn=next&page={{page}}">下一頁</a>
         {% endif %}
     </div>
 
+</div>
+<div id="message">
+    {{message}}
 </div>
 
 {% endblock %}
