--- a/todo/templates/todo/all-todo.html
+++ b/todo/templates/todo/all-todo.html
@@ -8,7 +8,7 @@
 </div>
 <div id="all-todo-list">
 
-    {% for todo in todos %}
+    {% for todo in page_obj %}
     <div id="all-todo-list-title" style="font-weight: 700; padding: 5px;">
         {{todo.id}}
 
@@ -23,22 +23,26 @@
 
 
     <div id="page-a-button">
-        {% if prev %}
-        <a href="{% url 'all-todo' %}?page_btn=prev&page={{page}}">上一頁</a>
+        {% if page_obj.has_previous %}
+        <a href="{% url 'all-todo' %}?page={{ page_obj.previous_page_number }}">上一頁</a>
         {% endif %}
 
-        {% for i in total_page %}
-        <a href="{% url 'all-todo' %}?page_btn=&page={{i}}">{{i}}</a>
+        <!-- 生成頁碼範圍 -->
+        {% for num in page_obj.paginator.page_range %}
+        {% if num == page_obj.number %}
+        {{ num }}
+
+        {% else %}
+        <a href="{% url 'all-todo' %}?page={{ num }}">{{ num }}</a>
+        {% endif %}
+
         {% endfor %}
 
-        {% if next %}
-        <a href="{% url 'all-todo' %}?page_btn=next&page={{page}}">下一頁</a>
+        {% if page_obj.has_next %}
+        <a href="{% url 'all-todo' %}?page={{page_obj.next_page_number}}">下一頁</a>
         {% endif %}
     </div>
 
-</div>
-<div id="message">
-    {{message}}
 </div>
 
 {% endblock %}
